--- a/codepipeline.yaml
+++ b/codepipeline.yaml
@@ -168,7 +168,7 @@ Resources:
           Actions:
             - Name: UnitTest
               ActionTypeId:
-                Category: Build
+                Category: Test
                 Owner: AWS
                 Provider: CodeBuild
                 Version: "1"
@@ -239,7 +239,7 @@ Resources:
 
               - Name: IntegrationTest
                 ActionTypeId:
-                  Category: Build
+                  Category: Test
                   Owner: AWS
                   Provider: CodeBuild
                   Version: "1"
