--- a/codepipeline.yaml
+++ b/codepipeline.yaml
@@ -126,6 +126,9 @@ Resources:
       ArtifactStore:
         Location: !Ref BuildPipelineArtifactsBucket
         Type: S3
+        EncryptionKey:
+          Id: !Ref BuildPipelineArtifactsKmsKey
+          Type: KMS
       RoleArn: !Ref BuildPipelineExecutionRole
       RestartExecutionOnUpdate: true
       Stages:
