--- a/pipeline/buildspec_integration_test.yml
+++ b/pipeline/buildspec_integration_test.yml
@@ -3,13 +3,13 @@ phases:
   install:
     runtime-versions:
       python: 3.8
+    commands:
+      - pip install --upgrade pip
+      - pip install pipenv
+      - pipenv install --dev
   build:
     commands:
       # trigger the integration tests here
       - echo 'Running integration tests'
-      - pip install --upgrade pip
-      - pip install pipenv
-      - pipenv install --dev
       - aws s3 sync --no-progress s3://${TEST_PHOTO_IMAGE_BUCKET_PATH} data/images
-      - . ./assume-role.sh ${ENV_PIPELINE_EXECUTION_ROLE} deploy
       - pipenv run make integ-test
