Remove CodeStar connection from parameters of update pipeline job.
don't need because SSM lookup handles it and with it configured in job,
it was failing

--- a/codepipeline.yaml
+++ b/codepipeline.yaml
@@ -143,8 +143,7 @@ Resources:
                 Capabilities: CAPABILITY_NAMED_IAM
                 ParameterOverrides: !Sub |
                   {
-                    "FeatureGitBranch": "${FeatureGitBranch}",
-                    "CodeStarConnectionArn": "${CodeStarConnectionArn}"
+                    "FeatureGitBranch": "${FeatureGitBranch}"
                   }
               InputArtifacts:
                 - Name: SourceCodeAsZip
