--- a/codepipeline.yaml
+++ b/codepipeline.yaml
@@ -284,27 +284,40 @@ Resources:
           - IsMainBranchPipeline
           - Name: DeployDev
             Actions:
-              - Name: DeployDev
-                RoleArn: !Ref DevPipelineExecutionRole
+              - Name: CreateChangeSet
+                RunOrder: 1
                 ActionTypeId:
-                  Category: Build
+                  Category: Deploy
                   Owner: AWS
-                  Provider: CodeBuild
-                  Version: "1"
+                  Provider: CloudFormation
+                  Version: '1'
                 Configuration:
-                  ProjectName: !Ref CodeBuildProjectDeploy
-                  EnvironmentVariables: !Sub |
-                    [
-                      {"name": "REGION", "value": "${Region}"},
-                      {"name": "STACK_NAME", "value": "${AppName}-${DevAppEnv}"},
-                      {"name": "APP_ENV_NAME", "value": "${DevAppEnv}"},
-                      {"name": "CLOUDFORMATION_EXECUTION_ROLE", "value": "${DevCloudFormationExecutionRole}"},
-                      {"name": "BUILD_ARTIFACT_BUCKET", "value": "${BuildPipelineArtifactsBucket}"},
-                      {"name": "BUILD_ARTIFACT_PREFIX_PATH", "value": "package/${AWS::StackName}"}
-                    ]
+                  ActionMode: CHANGE_SET_REPLACE
+                  RoleArn: !Ref DevCloudFormationExecutionRole
+                  StackName: !Sub "${AppName}-${DevAppEnv}"
+                  ChangeSetName: !Sub "${AppName}-${GitBranch}-ChangeSet"
+                  TemplatePath: 'BuildArtifactAsZip::packaged.yaml'
+                  ParameterOverrides: !Sub '{ "ServiceEnv": "${DevAppEnv}" }'
+                  Capabilities: CAPABILITY_NAMED_IAM
                 InputArtifacts:
                   - Name: BuildArtifactAsZip
-                RunOrder: 1
+                RoleArn: !Ref DevPipelineExecutionRole
+
+              - Name: ExecuteChangeSet
+                RunOrder: 2
+                ActionTypeId:
+                  Category: Deploy
+                  Owner: AWS
+                  Provider: CloudFormation
+                  Version: '1'
+                Configuration:
+                  ActionMode: CHANGE_SET_EXECUTE
+                  RoleArn: !Ref DevCloudFormationExecutionRole
+                  StackName: !Sub "${AppName}-${DevAppEnv}"
+                  ChangeSetName: !Sub "${AppName}-${GitBranch}-ChangeSet"
+                OutputArtifacts:
+                  - Name: !Sub "${AppName}-${GitBranch}-ChangeSet"
+                RoleArn: !Ref DevPipelineExecutionRole
 
 #              - Name: IntegrationTest
 #                ActionTypeId:
@@ -316,7 +329,7 @@ Resources:
 #                  ProjectName: !Ref CodeBuildProjectIntegrationTest
 #                InputArtifacts:
 #                  - Name: SourceCodeAsZip
-#                RunOrder: 2
+#                RunOrder: 3
           - !Ref AWS::NoValue
 
         - !If
@@ -331,27 +344,40 @@ Resources:
               #    Provider: Manual
               #    Version: "1"
               #   RunOrder: 1
-              - Name: DeployProd
-                RoleArn: !Ref ProdPipelineExecutionRole
+              - Name: CreateChangeSet
+                RunOrder: 2 # Leave at 2 in case manual approval preceding
                 ActionTypeId:
-                  Category: Build
+                  Category: Deploy
                   Owner: AWS
-                  Provider: CodeBuild
-                  Version: "1"
-                RunOrder: 2 # keeping run order as 2 in case manual approval is enabled
+                  Provider: CloudFormation
+                  Version: '1'
                 Configuration:
-                  ProjectName: !Ref CodeBuildProjectDeploy
-                  EnvironmentVariables: !Sub |
-                    [
-                      {"name": "REGION", "value": "${Region}"},
-                      {"name": "STACK_NAME", "value": "${AppName}-${ProdAppEnv}"},
-                      {"name": "APP_ENV_NAME", "value": "${ProdAppEnv}"},
-                      {"name": "CLOUDFORMATION_EXECUTION_ROLE", "value": "${ProdCloudFormationExecutionRole}"},
-                      {"name": "BUILD_ARTIFACT_BUCKET", "value": "${BuildPipelineArtifactsBucket}"},
-                      {"name": "BUILD_ARTIFACT_PREFIX_PATH", "value": "package/${AWS::StackName}"}
-                    ]
+                  ActionMode: CHANGE_SET_REPLACE
+                  RoleArn: !Ref ProdCloudFormationExecutionRole
+                  StackName: !Sub "${AppName}-${ProdAppEnv}"
+                  ChangeSetName: !Sub "${AppName}-${GitBranch}-ChangeSet"
+                  TemplatePath: 'BuildArtifactAsZip::packaged.yaml'
+                  ParameterOverrides: !Sub '{ "ServiceEnv": "${ProdAppEnv}" }'
+                  Capabilities: CAPABILITY_NAMED_IAM
                 InputArtifacts:
                   - Name: BuildArtifactAsZip
+                RoleArn: !Ref ProdPipelineExecutionRole
+
+              - Name: ExecuteChangeSet
+                RunOrder: 3
+                ActionTypeId:
+                  Category: Deploy
+                  Owner: AWS
+                  Provider: CloudFormation
+                  Version: '1'
+                Configuration:
+                  ActionMode: CHANGE_SET_EXECUTE
+                  RoleArn: !Ref ProdCloudFormationExecutionRole
+                  StackName: !Sub "${AppName}-${ProdAppEnv}"
+                  ChangeSetName: !Sub "${AppName}-${GitBranch}-ChangeSet"
+                OutputArtifacts:
+                  - Name: !Sub "${AppName}-${GitBranch}-ChangeSet"
+                RoleArn: !Ref ProdPipelineExecutionRole
           - !Ref AWS::NoValue
 
 
