Try out AWS Powertools structured logger

--- a/template.yaml
+++ b/template.yaml
@@ -59,6 +59,7 @@ Globals:
             - XRaySDKEnabled
             - Ref: XRaySDKEnabled
             - Enabled
+        POWERTOOLS_SERVICE_NAME: !Ref AWS::StackName
     Tags:
       ServiceName: !Ref ServiceName
       ServiceEnv: !Ref ServiceEnv
