Make sure all resources in app and pipeline are tagged
this sets us up to do cross account inetgration testing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Image data
 data/images
 
+# Deploy
+codepipeline-config-*.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
