--- a/pipeline/buildspec_build_package.yml
+++ b/pipeline/buildspec_build_package.yml
@@ -12,6 +12,9 @@ phases:
   build:
     commands:
       - make build
+      - ENV=${GIT_BRANCH} APPNAME=${APPNAME} PIPELINE_CONFIG_FILE=codepipeline-config-feature.yaml make generate-codepipeline-cfn-config
+      - ENV=${DEV_ENV} APPNAME=${APPNAME} PIPELINE_CONFIG_FILE=codepipeline-config-dev.yaml make generate-codepipeline-cfn-config
+      - ENV=${PROD_ENV} APPNAME=${APPNAME} PIPELINE_CONFIG_FILE=codepipeline-config-prod.yaml make generate-codepipeline-cfn-config
       - sam package --s3-bucket ${BUILD_ARTIFACT_BUCKET}
                     --s3-prefix ${BUILD_ARTIFACT_PREFIX_PATH}
                     --region ${REGION}
@@ -19,5 +22,6 @@ phases:
                     --output-template-file packaged.yaml
 artifacts:
   files:
+    - codepipeline-config-*.yaml
     - packaged.yaml
     - pipeline/*
